Filled in Customer Segments

--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
           <td colspan="2" rowspan="2">
             <h4>Key Partners</h4>
             <p>more details 
-            <a class="" 
-              data-original-title="More details"
-              data-content="And here's some amazing content. It's very engaging. right?" 
-              data-placement="bottom"
-              rel="popover" href="#">...</a>
+            
             </p>
           </td>
           <td colspan="2">
@@ -41,7 +37,9 @@
           </td>
           <td colspan="2" rowspan="2">
             <h4>Customer Segments</h4>
-            <p>...</p>
+            <p>Target customers are people living in the salt lake area.  We are creating value particularly for those
+		in neighborhood watch programs for their local neighborhood.
+	    </p>
           </td>
         </tr>
         <tr>
