Customer Relationship and Channels established

--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
           </td>
           <td colspan="2" rowspan="2">
             <h4>Value Proposition</h4>
-            <p>...</p>
+            <p>we 
+
+	    </p>
           </td>
           <td colspan="2">
             <h4>Customer Relationship</h4>
-            <p>...</p>
+            <p>Automated services / self service.  We're providing automated services that customers can use at their
+		own discretion.
+	    </p>
           </td>
           <td colspan="2" rowspan="2">
             <h4>Customer Segments</h4>
@@ -49,7 +53,8 @@
           </td>
           <td colspan="2">
             <h4>Channels</h4>
-            <p>...</p>
+            <p>Advertising is limited to word of mouth. All other channels are via a website. 
+	    </p>
           </td>
         </tr>
         <tr>
