Created Value Proposition

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           </td>
           <td colspan="2" rowspan="2">
             <h4>Value Proposition</h4>
-            <p>we 
-
+            <p>We are providing convenience for our customers by allowing them to do their jobs with greater ease and 
+		speed.
 	    </p>
           </td>
           <td colspan="2">
