Added Key Activities

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
           </td>
           <td colspan="2">
             <h4>Key Activities</h4>
-            <p>...</p>
+            <p>Using customer given information, we send notifications to those concerned regarding issues of note as 
+		noted by users
+	    
+	    </p>
           </td>
           <td colspan="2" rowspan="2">
             <h4>Value Proposition</h4>
