Added Key Resources

--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
         <tr>
           <td colspan="2">
             <h4>Key Resources</h4>
-            <p>...</p>
+            <p>Our developers, to build needed software.  Email and web services, to provide comunication for customers.
+		
+
+
+	    </p>
           </td>
           <td colspan="2">
             <h4>Channels</h4>
