Added Key Partners

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <tr>
           <td colspan="2" rowspan="2">
             <h4>Key Partners</h4>
-            <p>more details 
+            <p>Phone service providers will provide the means to send notifications and provide communications for 
+		customers
             
             </p>
           </td>
@@ -54,8 +55,6 @@
             <h4>Key Resources</h4>
             <p>Our developers, to build needed software.  Email and web services, to provide comunication for customers.
 		
-
-
 	    </p>
           </td>
           <td colspan="2">
