Added costs structure

--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
         <tr>
           <td colspan="5">
             <h4>Cost Structure</h4>
-            <p>...</p>
+            <p>We are value driven, and have few costs.  Providing notifications via our key partnership with phone
+		service providers appears to be our potentially largest cost.  Otherwise, costs of website maintenance
+		may be a thing.
+	    </p>
           </td>
           <td colspan="5">
             <h4>Revenue Streams</h4>
