Added Revenue Streams

--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
           </td>
           <td colspan="5">
             <h4>Revenue Streams</h4>
-            <p>...</p>
+            <p>The initial price of the application is our only source of revenue. The Application is a matter 
+		of additional convenience and ease for a somewhat niche group. I think a price between $2 - $5 is
+		realistic.  
+
+
+	    </p>
           </td>
         </tr>
       </table>
