Micah's additions to the business canvas
I just added my text into each section.  I avoided deleting anything.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="description" content="Business Model Canvas Template">
     <meta name="author" content="Zeljko Dakic">
     <link href='http://fonts.googleapis.com/css?family=Headland+One' rel='stylesheet' type='text/css'>
+    <style>
+		ul { list-style: disc; }
+	</style>
   </head>
   <body>
     <div class="container">
@@ -19,49 +22,91 @@
         <tr>
           <td colspan="2" rowspan="2">
             <h4>Key Partners</h4>
-            <p>more details 
-            <a class="" 
-              data-original-title="More details"
-              data-content="And here's some amazing content. It's very engaging. right?" 
-              data-placement="bottom"
-              rel="popover" href="#">...</a>
-            </p>
+            <ul>
+            	<li>Current HOA's</li>
+				<li>Neighborhood Watch Groups</li>
+		Phone service providers will provide the means to send notifications and provide communications for customers
+            </ul>
           </td>
           <td colspan="2">
             <h4>Key Activities</h4>
-            <p>...</p>
+            <ul>
+            	<li>Notifications</li>
+            	<li>Alerts</li>
+				<li>Revenue comes in the form of very specific advertising to the neighboorhood and uders</li>
+		Using customer given information, we send notifications to those concerned regarding issues of note as noted by users.
+            </ul>
           </td>
           <td colspan="2" rowspan="2">
             <h4>Value Proposition</h4>
-            <p>...</p>
+            <ul>
+            	<li>Have links to Homes and Cars for sale in the neighborhood</li>
+				<li>Saves Money by protecting from theft and emergency</li>
+				<li>Brings neighborhoods together</li>
+				<li>Promotes safety and communication</li>
+		>We are providing convenience for our customers by allowing them to do their jobs with greater ease and speed.
+            </ul>
           </td>
           <td colspan="2">
             <h4>Customer Relationship</h4>
-            <p>...</p>
+            <ul>
+            	<li>Customers would have very little direct communication with the owners/developers,
+            		however the site would be very simple and self explanatory, allowing for simple set up
+            		and satisfied users.</li>
+            	Automated services / self service.  We're providing automated services that customers can use at their own discretion.
+            </ul>
           </td>
           <td colspan="2" rowspan="2">
             <h4>Customer Segments</h4>
-            <p>...</p>
+            <ul>
+            	<li>Customers need to be able to log in and set up their notifications easily</li>
+            	<li>Users would rely on the group and others in their neighborhood to make the site
+            		successful.</li>
+            Target customers are people living in the salt lake area.  We are creating value particularly for those in neighborhood watch programs for their local neighborhood.
+            </ul>
           </td>
         </tr>
         <tr>
           <td colspan="2">
             <h4>Key Resources</h4>
-            <p>...</p>
+            <ul>
+            	<li>Users may need to be notified if their group has not logged on in over a week or a month,
+            		as the site's benefit and success depends on the neighborhood users.</li>
+            	Our developers, to build needed software.  Email and web services, to provide comunication for customers.
+            </ul>
           </td>
           <td colspan="2">
             <h4>Channels</h4>
-            <p>...</p>
+            <ul>
+            	<li>Social Networking will be a major assest in the website.</li>
+				<li>Satisfied users will speak publicly about their new found security and neighborhood connection</li>
+		Advertising is limited to word of mouth. All other channels are via a website.
+            </ul>
           </td>
         </tr>
         <tr>
           <td colspan="5">
             <h4>Cost Structure</h4>
-            <p>...</p>
+            <ul>
+            	<li>Membership Would be Free</li>
+            	<li>Time available will be the deciding cost for each member of the group.</li>
+            	<li>Website domain, hardware, server/site hosting, will carry a cost.</li>
+            We are value driven, and have few costs.  Providing notifications via our key partnership with phone service providers appears to be our potentially largest cost.  Otherwise, costs of website maintenance may be a thing.
+            </ul>
           </td>
           <td colspan="5">
             <h4>Revenue Streams</h4>
-            <p>...</p>
+            <ul>
+            	<li>Car and Classified websites will be able to have custom advertisements 
+            		of listing in the neighborhood of the group, making sales much more convienent and local</li>
+        		<li>Local Realtors would be able to post their picture, ad, or bio, for when the user is 
+        			interested in selling their home or moving.</li>
+    			<li>Insurance companies would advertise on the site, for renter's and property insurance,
+    				and auto insurance. They could offer competitive discounts to the users, since the site 
+    				is technically providing better security for their property.</li>
+    	The initial price of the application is our only source of revenue. The Application is a matter of additional convenience and ease for a somewhat niche group. I think a price between $2 - $5 is realistic.
+
+            </ul>
           </td>
         </tr>
       </table>
