Changed Key Partners, Key Activities, and Value proposition to not suck

--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
         <tr>
           <td colspan="2" rowspan="2">
             <h4>Key Partners</h4>
-            <p>Phone service providers will provide the means to send notifications and provide communications for 
-		customers
+            <p>Phone service providers - send notifications<br>
+		Neighborhood watch - help us understand what is needed
             
             </p>
           </td>
           <td colspan="2">
             <h4>Key Activities</h4>
-            <p>Using customer given information, we send notifications to those concerned regarding issues of note as 
-		noted by users
+            <p>Keep open dialogue with neighborhood watch groups to meet their needs.<br>
+		Maintain/update website and web communications.
 	    
 	    </p>
           </td>
           <td colspan="2" rowspan="2">
             <h4>Value Proposition</h4>
-            <p>We are providing convenience for our customers by allowing them to do their jobs with greater ease and 
-		speed.
+            <p>Provide convenience for our customers by allowing them to watch their neighborhood with greater ease and speed.<br>
+		
 	    </p>
           </td>
           <td colspan="2">
@@ -53,7 +53,7 @@
         <tr>
           <td colspan="2">
             <h4>Key Resources</h4>
-            <p>Our developers, to build needed software.  Email and web services, to provide comunication for customers.
+            <p>Email and web services, to provide communication for customers.
 		
 	    </p>
           </td>
