Changed The other sections to suck less.

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
           </td>
           <td colspan="2">
             <h4>Customer Relationship</h4>
-            <p>Automated services / self service.  We're providing automated services that customers can use at their
-		own discretion.
+            <p>Automated services / self service.<br>
+		Contact with neighborhood watch leaders to meet growing needs.
 	    </p>
           </td>
           <td colspan="2" rowspan="2">
             <h4>Customer Segments</h4>
-            <p>Target customers are people living in the salt lake area.  We are creating value particularly for those
+            <p>Target customers are people living in the salt lake area; Particularly for those
 		in neighborhood watch programs for their local neighborhood.
 	    </p>
           </td>
@@ -59,25 +59,26 @@
           </td>
           <td colspan="2">
             <h4>Channels</h4>
-            <p>Advertising is limited to word of mouth. All other channels are via a website. 
+            <p>Website<br>
+		Word of Mouth<br>
+		Neighborhood watch meetings<br>
+		Newspaper ads<br>
 	    </p>
           </td>
         </tr>
         <tr>
           <td colspan="5">
             <h4>Cost Structure</h4>
-            <p>We are value driven, and have few costs.  Providing notifications via our key partnership with phone
-		service providers appears to be our potentially largest cost.  Otherwise, costs of website maintenance
-		may be a thing.
+            <p>Employees<br>
+		Advertising<br>
+		Website Maintainence<br>
+		Email/notification fees<br>
 	    </p>
           </td>
           <td colspan="5">
             <h4>Revenue Streams</h4>
-            <p>The initial price of the application is our only source of revenue. The Application is a matter 
-		of additional convenience and ease for a somewhat niche group. I think a price between $2 - $5 is
-		realistic.  
-
-
+            <p>Advertising<br>
+		Purchases from neighborhood watch groups<br>
 	    </p>
           </td>
         </tr>
