--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <meta name="description" content="Business Model Canvas Template">
     <meta name="author" content="Zeljko Dakic">
     <link href='http://fonts.googleapis.com/css?family=Headland+One' rel='stylesheet' type='text/css'>
+    <style>
+		ul {
+			list-style: disc;
+			font-size: 10px;
+		}
+	</style>
   </head>
   <body>
     <div class="container">
@@ -19,49 +25,116 @@
         <tr>
           <td colspan="2" rowspan="2">
             <h4>Key Partners</h4>
-            <p>more details 
-            <a class="" 
-              data-original-title="More details"
-              data-content="And here's some amazing content. It's very engaging. right?" 
-              data-placement="bottom"
-              rel="popover" href="#">...</a>
-            </p>
+            <ul>
+            	<li>Rick - Currently the Emergency Contact Elect for his block.</li>
+				<li>The Entire Code Toad Group as Developers</li>
+				<li>Our Client/Instructor - Chris</li>
+		Phone service providers - send notifications<br>
+		Neighborhood watch - help us understand what is needed
+
+            </ul>
           </td>
           <td colspan="2">
             <h4>Key Activities</h4>
-            <p>...</p>
+            <ul>
+            	<li>Work Out Notifications/Alerts Methods and Types</li>
+				<li>Setup Login System</li>
+		Keep open dialogue with neighborhood watch groups to meet their needs.<br>
+		Maintain/update website and web communications.
+
+            </ul>
           </td>
           <td colspan="2" rowspan="2">
             <h4>Value Proposition</h4>
-            <p>...</p>
+            <ul>
+            	<li>Have links to Homes and Cars for sale in the neighborhood</li>
+				<li>Saves Money by protecting from theft and emergency</li>
+				<li>Brings neighborhoods together</li>
+				<li>Promotes safety and communication</li>
+		Provide convenience for our customers by allowing them to watch their neighborhood with greater ease and speed.<br>
+
+            </ul>
           </td>
           <td colspan="2">
             <h4>Customer Relationship</h4>
-            <p>...</p>
+            <ul>
+            	<li>Customers would have very little direct communication with the owners/developers,
+            		however the site would be very simple and self explanatory, allowing for simple set up
+            		and satisfied users.</li>
+            	<li></li>
+            	Automated services / self service.<br>
+		Contact with neighborhood watch leaders to meet growing needs.
+
+            </ul>
           </td>
           <td colspan="2" rowspan="2">
             <h4>Customer Segments</h4>
-            <p>...</p>
+            <ul>
+            	<li>HOA Groups</li>
+            	<li>Neighborhood Emergency Response Groups</li>
+            	<li>Home Owners</li>
+            	<li>Gated Communities</li>
+            	Target customers are people living in the salt lake area; Particularly for those
+		in neighborhood watch programs for their local neighborhood.
+            </ul>
           </td>
         </tr>
         <tr>
           <td colspan="2">
             <h4>Key Resources</h4>
-            <p>...</p>
+            <ul>
+            	<li>Figure Out Geographic (Google Maps) API for Neighborhood Groups</li>
+            	<li>Users may need to be notified if their group has not logged on in over a week or a month,
+            		as the site's benefit and success depends on the neighborhood users.</li>
+            	Email and web services, to provide communication for customers.
+            </ul>
           </td>
           <td colspan="2">
             <h4>Channels</h4>
-            <p>...</p>
+            <ul>
+            	<li>Social Networking will be a major assest for the website.</li>
+				<li>Satisfied users will speak publicly about their new found 
+					security, neighborhood connection, and peace of mind.</li>
+				<li>Neighbors would invite "new move-ins"</li>
+				<li>HOA's Could Invite new members</li>
+		Website<br>
+		Word of Mouth<br>
+		Neighborhood watch meetings<br>
+		Newspaper ads<br>
+
+            </ul>
           </td>
         </tr>
         <tr>
           <td colspan="5">
             <h4>Cost Structure</h4>
-            <p>...</p>
+            <ul>
+            	<li>Profit: Membership Would be Free</li>
+            	<li>Cost: Time available will be the deciding cost for each member of the group.</li>
+            	<li>Cost: The group has already paid to take this course</li>
+            	<li>Cost: Website domain, hardware, server/site hosting</li>
+            	Employees<br>
+		Advertising<br>
+		Website Maintainence<br>
+		Email/notification fees<br>
+
+            </ul>
           </td>
           <td colspan="5">
             <h4>Revenue Streams</h4>
-            <p>...</p>
+            <ul>
+            	<li>Car and Classified websites will be able to have custom advertisements 
+            		of listings in the neighborhood of the group, making sales much more convienent and local</li>
+        		<li>Local Realtors would be able to post their picture, ad, or bio, for when the user is 
+        			interested in selling their home and moving.</li>
+    			<li>Insurance companies would advertise on the site, for renter's, property insurance,
+    				and auto insurance. They could offer competitive discounts to the users, since the site 
+    				is technically providing better security for their property.</li>
+    			<li>Site promotes security, safety, and peace of mind.</li>
+    		Advertising<br>
+		Purchases from neighborhood watch groups<br>
+
+            </ul>
           </td>
         </tr>
       </table>
